tests/miniJava/pos/001240_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( false ) System.out.println ( { } ) ; } }
