tests/miniJava/neg/006132_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { System.out.println int [] java ; { } ) ; } }
